@@ -67,8 +67,7 @@ get_systime(
 	getclock(TIMEOFDAY, &ts);
 # endif
 	now->l_i = ts.tv_sec + JAN_1970;
-	now->l_uf |= ntp_random() & 0x3;
-	dtemp = sys_residual + ts.tv_nsec / 1e9;
+	dtemp = sys_residual + (ts.tv_nsec + ntp_random() / 0.5e9) / 1e9;
 	if (dtemp >= 1.) {
 		dtemp -= 1.;
 		now->l_i++;
@@ -87,8 +86,7 @@ get_systime(
 	 */
 	GETTIMEOFDAY(&tv, NULL);
 	now->l_i = tv.tv_sec + JAN_1970;
-	now->l_uf |= ntp_random() & 0xfff;
-	dtemp = sys_residual + tv.tv_usec / 1e6;
+	dtemp = sys_residual + (tv.tv_usec + ntp_random() / 0.5e6) / 1e6;
 	if (dtemp >= 1.) {
 		dtemp -= 1.;
 		now->l_i++;
