@@ -3005,14 +3005,8 @@ static l_fp
 			l_fp nts;
 			DPRINTF(4, ("fetch_timestamp: system network time stamp: %ld.%06ld\n", tvp->tv_sec, tvp->tv_usec));
 			nts.l_i = tvp->tv_sec + JAN_1970;
-			dtemp = tvp->tv_usec / 1e6;
-
- 			/* fuzz lower bits not covered by precision */
- 			if (sys_precision != 0)
- 				dtemp += (ntp_random() / FRAC - .5) / (1 <<
- 								       -sys_precision);
-
-			nts.l_uf = (u_int32)(dtemp*FRAC);
+		        dtemp = (tvp->tv_usec + ntp_random() / 0.5e6) / 1e6;
+			nts.l_uf = (u_int32)(dtemp * FRAC);
 #ifdef DEBUG_TIMING
 			{
 				l_fp dts = ts;
